cmake_minimum_required(VERSION 3.26)
project(Engine VERSION 0.1.0 LANGUAGES C CXX)

set (FullOutputDir "${CMAKE_SOURCE_DIR}/bin")
set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${FullOutputDir}/Static Libraries")
set (CMAKE_LIBRARY_OUTPUT_DIRECTORY "${FullOutputDir}")
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY "${FullOutputDir}")

set (SrcPath "${CMAKE_SOURCE_DIR}/src/Source Files")
set (HeaderPath "${CMAKE_SOURCE_DIR}/src/Header Files")
set (ResourcePath "${CMAKE_SOURCE_DIR}/src/Resource Files")
file (GLOB Sources CONFIGURE_DEPENDS "${SrcPath}/*.cpp" "${HeaderPath}/*.hpp" "${SrcPath}/*.c" "${HeaderPath}/*.h")

include_directories(${HeaderPath})
include_directories(${SrcPath})
include_directories($ENV{VULKAN_PATH})

link_directories($ENV{VULKAN_PATH})

link_libraries(glfw3)
link_libraries(vulkan-1)

add_executable("${PROJECT_NAME}-test" ${Sources})
target_compile_features("${PROJECT_NAME}-test" PUBLIC cxx_std_17)

add_custom_target(
	copy_resources ALL
	COMMAND ${CMAKE_COMMAND} -E copy_directory
	${ResourcePath}
	${FullOutputDir}/Debug
	COMMAND ${CMAKE_COMMAND} -E copy_directory
	${ResourcePath}
	${FullOutputDir}/Release
	COMMAND ${CMAKE_COMMAND} -E copy_directory
	${ResourcePath}
	${FullOutputDir}
	COMMENT "Copying resources into birnay output folder"
)
add_dependencies("${PROJECT_NAME}-test" copy_resources)

